// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@startupjs/babel-plugin-rn-stylename-inline Aliasing css and styl: Aliasing css and styl 1`] = `

import React from 'react'
import { css as myCss, styl as myStyl, observer } from 'startupjs'

export default observer(function Card () {
  myStyl\`
    .card
      color blue
  \`
  return <View styleName='card' />
})

myCss\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { observer } from "startupjs";
const __CSS_GLOBAL__ = {
  card: {
    color: "red",
    backgroundColor: "green",
  },
  __hash__: 1762191192,
};
const _localCssInstance = {
  card: {
    color: "#00f",
  },
  __hash__: -1529996446,
};
export default observer(function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return <View styleName="card" />;
});


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global and local css and styl. Several components: Global and local css and styl. Several components 1`] = `

import React from 'react'
import { css, styl } from 'startupjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  styl\`
    .root
      padding 8px 16px
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

styl\`
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  active: {
    backgroundColor: "#f00",
  },
  __hash__: -1767660834,
};
const _localCssInstance2 = {
  root: {
    marginTop: 16,
    borderRadius: 8,
  },
  __hash__: -1053412432,
};
const _localCssInstance = {
  root: {
    paddingTop: 8,
    paddingRight: 16,
    paddingBottom: 8,
    paddingLeft: 16,
  },
  __hash__: -1823792365,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}

function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global and local css. Several components: Global and local css. Several components 1`] = `

import React from 'react'
import { css } from 'startupjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  css\`
    .root {
      padding: 8px 16px;
    }
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

css\`
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  active: {
    backgroundColor: "red",
  },
  __hash__: -1812576046,
};
const _localCssInstance2 = {
  root: {
    marginTop: 16,
    borderRadius: 8,
  },
  __hash__: -1053412432,
};
const _localCssInstance = {
  root: {
    paddingTop: 8,
    paddingRight: 16,
    paddingBottom: 8,
    paddingLeft: 16,
  },
  __hash__: -1823792365,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}

function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global css. Several components: Global css. Several components 1`] = `

import React from 'react'
import { css } from 'startupjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

css\`
  .card {
    padding: 8px 16px;
  }
  .line {
    margin-top: 16px;
    border-radius: 8px;
  }
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  card: {
    paddingTop: 8,
    paddingRight: 16,
    paddingBottom: 8,
    paddingLeft: 16,
  },
  line: {
    marginTop: 16,
    borderRadius: 8,
  },
  active: {
    backgroundColor: "red",
  },
  __hash__: 1310335761,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}

function Line() {
  return <View styleName="line" />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global css. Simple: Global css. Simple 1`] = `

import React from 'react'
import { css, observer } from 'startupjs'

export default observer(function Card () {
  return <View styleName='card' />
})

css\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { observer } from "startupjs";
const __CSS_GLOBAL__ = {
  card: {
    color: "red",
    backgroundColor: "green",
  },
  __hash__: 1762191192,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global styl. Several components: Global styl. Several components 1`] = `

import React from 'react'
import { styl } from 'startupjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

styl\`
  .card
    padding 8px 16px
  .line
    margin-top 16px
    border-radius 8px
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  card: {
    paddingTop: 8,
    paddingRight: 16,
    paddingBottom: 8,
    paddingLeft: 16,
  },
  line: {
    marginTop: 16,
    borderRadius: 8,
  },
  active: {
    backgroundColor: "#f00",
  },
  __hash__: 553324671,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}

function Line() {
  return <View styleName="line" />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Global styl. Simple: Global styl. Simple 1`] = `

import React from 'react'
import { styl, observer } from 'startupjs'

export default observer(function Card () {
  return <View styleName='card' />
})

styl\`
  .card
    color red
    background-color green
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { observer } from "startupjs";
const __CSS_GLOBAL__ = {
  card: {
    color: "#f00",
    backgroundColor: "#008000",
  },
  __hash__: 772349652,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Should remove css and styl from startupjs import: Should remove css and styl from startupjs import 1`] = `

import React from 'react'
import { css, observer, styl } from 'startupjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { observer } from "startupjs";


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Should remove the whole lib if no other things are left in startupjs: Should remove the whole lib if no other things are left in startupjs 1`] = `

import React from 'react'
import { css, styl } from 'startupjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";


`;

exports[`@startupjs/babel-plugin-rn-stylename-inline Should throw an error if import is not specified: Should throw an error if import is not specified 1`] = `

import React from 'react'

styl\`
  .card
    color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: 
      Import not found for tagged template \`styl\`
    
[0m [90m 1 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m'react'[39m[0m
[0m [90m 2 |[39m[0m
[0m[31m[1m>[22m[39m[90m 3 |[39m styl[32m\`[39m[0m
[0m [90m   |[39m [31m[1m^[22m[39m[0m
[0m [90m 4 |[39m [32m  .card[39m[0m
[0m [90m 5 |[39m [32m    color red[39m[0m
[0m [90m 6 |[39m [32m\`[39m[0m

`;
